--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,10 @@
   <title>Let's Encrypt ISRG X1 Root detector</title>
 </head>
 <body>
+  <button onclick="location='#test-letsisrg';location.reload()">Force show prompt</button>
   <script>
     window.$letsisrg = { serviceName: 'ISRG Root X1' }
   </script>
-  <script src="../src/index.min.js"></script>
+  <script src="../src/index.js"></script>
 </body>
 </html>
